crates/ruff/src/rules/flake8_tidy_imports/snapshots/ruff__rules__flake8_tidy_imports__tests__ban_parent_imports.snap
---
source: crates/ruff/src/rules/flake8_tidy_imports/mod.rs
---
TID252.py:9:1: TID252 Relative imports from parent modules are banned
   |
 9 | from . import sibling
10 | from .sibling import example
11 | from .. import parent
   | ^^^^^^^^^^^^^^^^^^^^^ TID252
12 | from ..parent import example
13 | from ... import grandparent
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:10:1: TID252 Relative imports from parent modules are banned
   |
10 | from .sibling import example
11 | from .. import parent
12 | from ..parent import example
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
13 | from ... import grandparent
14 | from ...grandparent import example
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:11:1: TID252 Relative imports from parent modules are banned
   |
11 | from .. import parent
12 | from ..parent import example
13 | from ... import grandparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
14 | from ...grandparent import example
15 | from  .parent import hello
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:12:1: TID252 Relative imports from parent modules are banned
   |
12 | from ..parent import example
13 | from ... import grandparent
14 | from ...grandparent import example
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
15 | from  .parent import hello
16 | from .\
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:17:1: TID252 Relative imports from parent modules are banned
   |
17 |       parent import \
18 |           hello_world
19 | / from \
20 | |     ..parent\
21 | |     import \
22 | |     world_hello
   | |_______________^ TID252
23 |   from ..... import ultragrantparent
24 |   from ...... import ultragrantparent
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:21:1: TID252 Relative imports from parent modules are banned
   |
21 |     import \
22 |     world_hello
23 | from ..... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
24 | from ...... import ultragrantparent
25 | from ....... import ultragrantparent
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:22:1: TID252 Relative imports from parent modules are banned
   |
22 |     world_hello
23 | from ..... import ultragrantparent
24 | from ...... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
25 | from ....... import ultragrantparent
26 | from ......... import ultragrantparent
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:23:1: TID252 Relative imports from parent modules are banned
   |
23 | from ..... import ultragrantparent
24 | from ...... import ultragrantparent
25 | from ....... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
26 | from ......... import ultragrantparent
27 | from ........................... import ultragrantparent
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:24:1: TID252 Relative imports from parent modules are banned
   |
24 | from ...... import ultragrantparent
25 | from ....... import ultragrantparent
26 | from ......... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
27 | from ........................... import ultragrantparent
28 | from .....parent import ultragrantparent
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:25:1: TID252 Relative imports from parent modules are banned
   |
25 | from ....... import ultragrantparent
26 | from ......... import ultragrantparent
27 | from ........................... import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
28 | from .....parent import ultragrantparent
29 | from .........parent import ultragrantparent
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:26:1: TID252 Relative imports from parent modules are banned
   |
26 | from ......... import ultragrantparent
27 | from ........................... import ultragrantparent
28 | from .....parent import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
29 | from .........parent import ultragrantparent
30 | from ...........................parent import ultragrantparent
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:27:1: TID252 Relative imports from parent modules are banned
   |
27 | from ........................... import ultragrantparent
28 | from .....parent import ultragrantparent
29 | from .........parent import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
30 | from ...........................parent import ultragrantparent
   |
   = help: Replace relative imports from parent modules with absolute imports

TID252.py:28:1: TID252 Relative imports from parent modules are banned
   |
28 | from .....parent import ultragrantparent
29 | from .........parent import ultragrantparent
30 | from ...........................parent import ultragrantparent
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TID252
   |
   = help: Replace relative imports from parent modules with absolute imports


